# target-singer-jsonl

./: .gitignore  README.md  meltano.yml  pyproject.toml  setup.py
.github/workflows/: release_workflow.yml
target_singer_jsonl/: __init__.py
