[tool.poetry]
name = "target-singer-jsonl"
version = "0.1.0"
description = ""
authors = ["Ken Payne <ken@meltano.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "target_singer_jsonl"}]

[tool.poetry.dependencies]
python = "^3.10"
jsonschema = "^4.17.3"
smart-open = "^6.3.0"

[tool.poetry.group.dev.dependencies]
tap-carbon-intensity = {git = "https://gitlab.com/meltano/tap-carbon-intensity.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-singer-jsonl = 'target_singer_jsonl:main'